# backend_project

./: .env.example  pyproject.toml
auth/: apps.py  serializers.py  urls.py  views.py
cars/: models.py  serializers.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_initial.py
configs/: celery.py  settings.py  urls.py
configs/extra_configs/: __init__.py  email_configs.py  rest_configs.py
core/: models.py
core/dataclasses/: user_dataclass.py
core/exceptions/: jwt_exception.py
core/handlers/: error_handler.py
core/permissions/car_dealers_staff_permissions/: is_car_admin_permission.py  is_car_manager_permission.py  is_car_mechanic_permission.py  is_car_seller_permission.py  is_staff_dealer_common_permission.py
core/permissions/platform_main_permissions/: is_main_manager_permission.py
core/services/: email_service.py  jwt_service.py
dealerships/: models.py  serializers.py  urls.py  views.py
dealerships/choises/: staff_type_choice.py
dealerships/migrations/: 0001_initial.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
